AvSimRelease/AvSimDllMotionExternC.h

	DllExportExternC	BOOL			WriteSocketServerIP(const char* szData);
	DllExportExternC	BOOL			WriteSocketServerIP_Port(int nPort, const char* szData);
	DllExportExternC	BOOL			WriteSocketServerIP_Sock(const char* szData);
	DllExportExternC	BOOL			ReadSocketServerSubnetMask(char* szData);
	DllExportExternC	BOOL			ReadSocketServerSubnetMask_Port(int nPort, char* szData);
	DllExportExternC	BOOL			ReadSocketServerSubnetMask_Sock(char* szData);
	DllExportExternC	BOOL			WriteSocketServerSubnetMask(const char* szData);
	DllExportExternC	BOOL			WriteSocketServerSubnetMask_Port(int nPort, const char* szData);
	DllExportExternC	BOOL			WriteSocketServerSubnetMask_Sock(const char* szData);
	DllExportExternC	BOOL			ReadSocketServerGateway(char* szData);
	DllExportExternC	BOOL			ReadSocketServerGateway_Port(int nPort, char* szData);
	DllExportExternC	BOOL			ReadSocketServerGateway_Sock(char* szData);
	DllExportExternC	BOOL			WriteSocketServerGateway(const char* szData);
	DllExportExternC	BOOL			WriteSocketServerGateway_Port(int nPort, const char* szData);
	DllExportExternC	BOOL			WriteSocketServerGateway_Sock(const char* szData);
	DllExportExternC	BOOL			ReadSocketServerDNS(char* szData);
	DllExportExternC	BOOL			ReadSocketServerDNS_Port(int nPort, char* szData);
	DllExportExternC	BOOL			ReadSocketServerDNS_Sock(char* szData);
	DllExportExternC	BOOL			WriteSocketServerDNS(const char* szData);
	DllExportExternC	BOOL			WriteSocketServerDNS_Port(int nPort, const char* szData);
	DllExportExternC	BOOL			WriteSocketServerDNS_Sock(const char* szData);
	DllExportExternC	BOOL			ReadSocketServerPort(int* pData);
	DllExportExternC	BOOL			ReadSocketServerPort_Port(int nPort, int* pData);
	DllExportExternC	BOOL			ReadSocketServerPort_Sock(int* pData);
	DllExportExternC	BOOL			WriteSocketServerPort(int nData);
	DllExportExternC	BOOL			WriteSocketServerPort_Port(int nPort, int nData);
	DllExportExternC	BOOL			WriteSocketServerPort_Sock(int nData);
	
	DllExportExternC	BOOL			ReadSocketClientIP(char* szData);
	DllExportExternC	BOOL			ReadSocketClientIP_Port(int nPort, char* szData);
	DllExportExternC	BOOL			ReadSocketClientIP_Sock(char* szData);
	DllExportExternC	BOOL			WriteSocketClientIP(const char* szData);
	DllExportExternC	BOOL			WriteSocketClientIP_Port(int nPort, const char* szData);
	DllExportExternC	BOOL			WriteSocketClientIP_Sock(const char* szData);
	DllExportExternC	BOOL			ReadSocketClientSubnetMask(char* szData);
	DllExportExternC	BOOL			ReadSocketClientSubnetMask_Port(int nPort, char* szData);
	DllExportExternC	BOOL			ReadSocketClientSubnetMask_Sock(char* szData);
	DllExportExternC	BOOL			WriteSocketClientSubnetMask(const char* szData);
	DllExportExternC	BOOL			WriteSocketClientSubnetMask_Port(int nPort, const char* szData);
	DllExportExternC	BOOL			WriteSocketClientSubnetMask_Sock(const char* szData);
	DllExportExternC	BOOL			ReadSocketClientGateway(char* szData);
	DllExportExternC	BOOL			ReadSocketClientGateway_Port(int nPort, char* szData);
	DllExportExternC	BOOL			ReadSocketClientGateway_Sock(char* szData);
	DllExportExternC	BOOL			WriteSocketClientGateway(const char* szData);
	DllExportExternC	BOOL			WriteSocketClientGateway_Port(int nPort, const char* szData);
	DllExportExternC	BOOL			WriteSocketClientGateway_Sock(const char* szData);
	DllExportExternC	BOOL			ReadSocketClientDNS(char* szData);
	DllExportExternC	BOOL			ReadSocketClientDNS_Port(int nPort, char* szData);
	DllExportExternC	BOOL			ReadSocketClientDNS_Sock(char* szData);
	DllExportExternC	BOOL			WriteSocketClientDNS(const char* szData);
	DllExportExternC	BOOL			WriteSocketClientDNS_Port(int nPort, const char* szData);
	DllExportExternC	BOOL			WriteSocketClientDNS_Sock(const char* szData);