AvSimDll/MotionExternC/MotionControl_Patial.cs


        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerIP(byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerIP_Port(int nPort, byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerIP_Sock(byte[] szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketServerSubnetMask(IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketServerSubnetMask_Port(int nPort, IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketServerSubnetMask_Sock(IntPtr szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerSubnetMask(byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerSubnetMask_Port(int nPort, byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerSubnetMask_Sock(byte[] szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketServerGateway(IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketServerGateway_Port(int nPort, IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketServerGateway_Sock(IntPtr szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerGateway(byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerGateway_Port(int nPort, byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerGateway_Sock(byte[] szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketServerDNS(IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketServerDNS_Port(int nPort, IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketServerDNS_Sock(IntPtr szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerDNS(byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerDNS_Port(int nPort, byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerDNS_Sock(byte[] szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketServerPort(IntPtr pData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketServerPort_Port(int nPort, IntPtr pData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketServerPort_Sock(IntPtr pData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerPort(int nData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerPort_Port(int nPort, int nData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketServerPort_Sock(int nData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketClientIP(IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketClientIP_Port(int nPort, IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketClientIP_Sock(IntPtr szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketClientIP(byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketClientIP_Port(int nPort, byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketClientIP_Sock(byte[] szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketClientSubnetMask(IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketClientSubnetMask_Port(int nPort, IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketClientSubnetMask_Sock(IntPtr szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketClientSubnetMask(byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketClientSubnetMask_Port(int nPort, byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketClientSubnetMask_Sock(byte[] szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketClientGateway(IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketClientGateway_Port(int nPort, IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketClientGateway_Sock(IntPtr szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketClientGateway(byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketClientGateway_Port(int nPort, byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketClientGateway_Sock(byte[] szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketClientDNS(IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketClientDNS_Port(int nPort, IntPtr szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool ReadSocketClientDNS_Sock(IntPtr szData);

        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketClientDNS(byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketClientDNS_Port(int nPort, byte[] szData);
        [DllImport("AvSimDllMotionExternC.dll")]
        private extern static bool WriteSocketClientDNS_Sock(byte[] szData);
        #endregion
    }
}
